helm/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: "/jenkins"
    #nginx.ingress.kubernetes.io/auth-tls-secret: "ci/ted-mighty-tls"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: jenkins.ted.mighty
    http:
      paths:
      - path: /
      #- path: /jenkins(/|$)(.*)
        backend:
          serviceName: jenkins
          servicePort: 8080
